✨ 监听导航和侧边栏的a标签，支持路由推进

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,11 @@
           Article: {
             param: 'id',
           },
+          Page: {
+            param: 'id',
+          },
           Category: {
-            param: 'cateId',
+            param: 'cate',
           },
         },
       };
