🔧 📦 调整代码；添加日期类型页面、标签、作者页

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,23 @@
           Home: {
             path: '/',
           },
+          Category: {
+            param: 'cate',
+          },
+          Date: {
+            param: 'date',
+          },
+          Author: {
+            param: 'auth',
+          },
+          Tags: {
+            param: 'tags',
+          },
           Article: {
             param: 'id',
           },
           Page: {
             param: 'id',
-          },
-          Category: {
-            param: 'cate',
           },
         },
       };
