--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>{$name}-{$title}</title>
     <script>
       window.bloghost = '{$host}';
+      window.zbpCopyright = '{$copyright}';
     </script>
   </head>
   <body>
